--- a/src/components/UserCard/style.css
+++ b/src/components/UserCard/style.css
@@ -49,11 +49,7 @@
   margin: 0 0 10px 0;
 }
 
-.user-card__body .bottom .see-more{
-  border: 0;
-  background-color: transparent;
+.user-card__body .bottom a {
+  text-decoration: none;
   font-weight: 600;
-  cursor: pointer;
-  font-size: 1rem;
-  font-family: 'Open Sans', sans-serif;
 }
