--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
 
+:root {
+  --textColorDark: #343434;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,4 +18,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.2rem;
+  color: var(--textColorDark);
+}
+
+a {
+  color: var(--textColorDark);
 }
