--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -1,6 +1,7 @@
 .searchbar {
   max-width: 500px;
   width: 100%;
+  position: relative;
 }
 
 .searchbar input {
@@ -12,4 +13,15 @@
   font-size: 1rem;
   box-shadow: 0 2px 8px 0px rgba(0,0,0,.2);
   font-family: 'Open Sans', sans-serif;
+}
+
+.searchbar i {
+  position: absolute;
+  display: block;
+  width: 15px;
+  height: 15px;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  filter: invert(60%);
 }
