--- a/src/components/FilterSideBar/style.css
+++ b/src/components/FilterSideBar/style.css
@@ -2,12 +2,28 @@
   grid-area: sidebar;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .filter-sidebar .title {
-  font-weight: 600;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
 .filter-sidebar label {
-  margin: 5px 0;
+  margin: 7px 0;
+  font-size: 1rem;
+}
+
+.filter-sidebar .clear {
+  border: 1px solid #197aa5;
+  border-radius: 4px;
+  background-color: #197aa5;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 5px 15px;
+  width: 130px;
+  margin-top: 10px;
+  cursor: pointer;
 }
