--- a/src/components/UserCard/style.css
+++ b/src/components/UserCard/style.css
@@ -1,6 +1,5 @@
 .user-card {
-  height: 300px;
-  border: 1px solid #ddd;
+  height: 315px;
   box-shadow: -1px 1px 8px 3px rgba(0,0,0,.2);
   border-radius: 8px;
   display: flex;
@@ -13,7 +12,7 @@
 }
 
 .user-card__header {
-  background-color: #BF3728;
+  background-color: #755c5a;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 15%;
@@ -36,20 +35,35 @@
 
 .user-card__body .middle .name-age {
   margin: 0;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.2rem;
   margin: 0 0 5px;
 }
 
 .user-card__body .middle .email{
   font-size: .9rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.user-card__body .bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .user-card__body .bottom .location {
   margin: 0 0 10px 0;
+  font-size: .9rem;
 }
 
-.user-card__body .bottom a {
-  text-decoration: none;
+.user-card__body .bottom .go-to-details {
+  border: 1px solid #197aa5;
+  border-radius: 4px;
+  background-color: #197aa5;
+  color: white;
   font-weight: 600;
+  text-decoration: none;
+  padding: 5px 15px;
+  width: 130px;
 }
