--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,10 +3,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 20px 40px;
-  background-color: #e4e4e4;
+  background-color: var(--header);
   border-bottom-left-radius: 8%;
   border-bottom-right-radius: 8%;
   box-shadow: 1px 3px 6px 1px rgba(0,0,0,.2);
+  z-index: 1;
 }
 
 .header img {
