--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px 0;
-  background-color: #e4e4e4;
+  background-color: var(--header);
   border-top-left-radius: 8%;
   border-top-right-radius: 8%;
   box-shadow: 1px -3px 6px 1px rgba(0,0,0,.2);
