--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,7 @@
 .footer {
   margin: auto 0 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px 0;
@@ -8,4 +9,33 @@
   border-top-left-radius: 8%;
   border-top-right-radius: 8%;
   box-shadow: 1px -3px 6px 1px rgba(0,0,0,.2);
+}
+
+.footer img {
+  height: 40px;
+  width: 100%;
+}
+
+.footer .footer-text {
+  margin: 30px 0 10px;
+}
+
+.footer .social-item {
+  position: relative;
+  display: inline-block;
+  margin: 0 8px;
+  border-radius: 50%;
+  background-color: var(--blue);
+  color: white;
+  width: 40px;
+  height: 40px;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+.footer .social-item i {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
