--- a/src/components/FilterSideBar/style.css
+++ b/src/components/FilterSideBar/style.css
@@ -13,6 +13,8 @@
 .filter-sidebar label {
   margin: 7px 0;
   font-size: .9rem;
+  display: flex;
+  align-items: center;
 }
 
 .filter-sidebar .clear {
@@ -27,4 +29,40 @@
   width: 130px;
   margin-top: 10px;
   cursor: pointer;
+  transition: background-color .2s ease-in;
+}
+
+.filter-sidebar .clear:hover {
+  border: 1px solid var(--darkRed);
+  background-color: var(--darkRed);
+}
+
+input[type="radio"] {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 3px;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin-right: 10px;
+  position: relative;
+  -webkit-appearance: none;
+  transition: height .2s, width .2s;
+}
+input[type="radio"]:hover {
+  height: 18px;
+  width: 18px;
+}
+
+input[type="radio"]:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 8px;
+  width: 8px;
+}
+input[type="radio"]:checked:after {
+  background-color: var(--red);
 }
