Make minor CSS mod on footer

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,7 @@
   --red: #FF5964;
   --darkRed: #e63743;
   --blue: #38618C;
+  --darkBlue: #1e4670;
   --gray: #666;
   --darkGray: #4e4e4e;
   --lightGray: #ccc;
