--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -31,6 +31,12 @@
   height: 40px;
   font-size: 1.4rem;
   cursor: pointer;
+  transition: background-color .2s ease-in;
+}
+
+.footer .social-item:hover {
+  background-color: var(--darkBlue);
+
 }
 
 .footer .social-item i {
