--- a/src/components/FilterSideBar/style.css
+++ b/src/components/FilterSideBar/style.css
@@ -66,3 +66,10 @@ input[type="radio"]:after {
 input[type="radio"]:checked:after {
   background-color: var(--red);
 }
+
+@media screen and (max-width: 775px) {
+  .filter-sidebar {
+    align-items: center;
+    margin-bottom: 30px;
+  }
+}
