--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -35,3 +35,12 @@
 .page-item:not(:first-child) {
   margin-left: 10px;
 }
+
+@media screen and (max-width: 775px) {
+  .page-list {
+    flex-wrap: wrap;
+  }
+  .page-item {
+    margin-bottom: 10px;
+  }
+}
