--- a/src/components/UserDetails/style.css
+++ b/src/components/UserDetails/style.css
@@ -97,3 +97,29 @@
   border: 1px solid var(--darkGray);
   background-color: var(--darkGray);
 }
+
+@media screen and (max-width: 745px) {
+  .user-details{
+    flex-direction: column;
+    margin: 30px 0;
+    align-items: center;
+  }
+
+  .user-details-column:nth-child(2) {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30px;
+  }
+
+  .user-details-column {
+    align-items: center;
+  }
+  .user-details-column .input-group {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .user-details-column .input-group .input-block:not(:first-child) {
+    margin-left: 0;
+  }
+}
