--- a/src/components/UserCards/style.css
+++ b/src/components/UserCards/style.css
@@ -1,6 +1,6 @@
 .user-list {
   grid-area: users;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 25px;
 }
