--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,11 @@
   height: 100%;
   background-color: var(--background);
 }
+
+.App.dark-mode {
+  background-color: var(--darkBackground);
+}
+
+a {
+  color: var(--textColorDark);
+}
