--- a/src/components/FilterSideBar/style.css
+++ b/src/components/FilterSideBar/style.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  color: var(--textColorDark);
 }
 
 .filter-sidebar .title {
@@ -65,6 +66,25 @@ input[type="radio"]:after {
 }
 input[type="radio"]:checked:after {
   background-color: var(--red);
+}
+
+.dark-mode .filter-sidebar {
+  color: var(--textColorLight);
+}
+
+
+.dark-mode .filter-sidebar .clear {
+  border: 1px solid var(--purple);
+  background-color: var(--purple);
+}
+
+.dark-mode .filter-sidebar .clear:hover {
+  border: 1px solid var(--darkPurple);
+  background-color: var(--darkPurple);
+}
+
+.dark-mode input[type="radio"]:checked:after {
+  background-color: var(--darkPurple);
 }
 
 @media screen and (max-width: 775px) {
