--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -26,3 +26,9 @@
   transform: translateY(-50%);
   filter: invert(60%);
 }
+
+@media screen and (max-width: 775px) {
+  .searchbar input {
+    margin: 20px 0;
+  }
+}
