--- a/src/components/UserCard/style.css
+++ b/src/components/UserCard/style.css
@@ -14,8 +14,8 @@
 
 .user-card__header {
   background-color: var(--blue);
-  border-top-right-radius: 8px;
-  border-top-left-radius: 8px;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
   border-bottom-left-radius: 15%;
   border-bottom-right-radius: 15%;
   display: flex;
@@ -74,4 +74,26 @@
 .user-card__body .bottom .go-to-details:hover {
   border: 1px solid var(--darkRed);
   background-color: var(--darkRed);
+}
+
+.dark-mode .user-card__body .bottom .go-to-details {
+  background-color: var(--purple);
+  border: 1px solid var(--purple);
+}
+
+.dark-mode .user-card__body .bottom .go-to-details:hover {
+  border: 1px solid var(--darkPurple);
+  background-color: var(--darkPurple);
+}
+
+.dark-mode .user-card {
+  background-color: var(--grayBackground);
+}
+
+.dark-mode .user-card__header {
+  background-color: var(--blueAlt);
+}
+
+.dark-mode .user-card__body {
+  color: white;
 }
