--- a/src/components/UserDetails/style.css
+++ b/src/components/UserDetails/style.css
@@ -1,7 +1,7 @@
 .user-details {
   border: 1px solid var(--lightGray);
   max-width: 720px;
-  margin: 30px auto 0;
+  margin: 30px auto;
   display: flex;
   padding: 20px;
   border-radius: 10px;
@@ -98,11 +98,20 @@
   background-color: var(--darkGray);
 }
 
-@media screen and (max-width: 745px) {
+.dark-mode .user-details {
+  background-color: var(--grayBackground);
+  color: white
+}
+
+@media screen and (max-width: 775px) {
   .user-details{
     flex-direction: column;
-    margin: 30px 0;
     align-items: center;
+    margin: 0;
+    box-shadow: none;
+    border: none;
+    max-width: 100%;
+    border-radius: 0;
   }
 
   .user-details-column:nth-child(2) {
