--- a/src/components/UserCard/style.css
+++ b/src/components/UserCard/style.css
@@ -5,6 +5,13 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  transform: translateY(0);
+  transition: transform .2s linear , box-shadow .2s linear;
+}
+
+.user-card:hover {
+  transform: translateY(-4px);
+  box-shadow: -1px 5px 8px 3px rgba(0,0,0,.2);
 }
 
 .user-card img {
